--- a/templates/answer/full_form.html.twig
+++ b/templates/answer/full_form.html.twig
@@ -9,6 +9,13 @@
 
 {% block body %}
 
+    <a href="{{ path('answer') }}" class="btn btn-outline-primary">
+        <i class="fas fa-arrow-left"></i>
+        Retour
+    </a>
+
+    <hr>
+
     {{ text('Formulaire de réponse - Texte') }}
 
     {{ form_start(form) }}
