Various little enhancements on access map & travel map

--- a/templates/main/access_map.html.twig
+++ b/templates/main/access_map.html.twig
@@ -21,5 +21,8 @@
 
 {% block javascript %}
     {{ parent() }}
+    <script>
+        var ceremonyOnly = {{ app.user.invitedForCeremonyOnly ? 'true' : 'false' }};
+    </script>
     {{ encore_entry_script_tags('access_map') }}
 {% endblock %}
