--- a/templates/answer/ceremony_only_form.html.twig
+++ b/templates/answer/ceremony_only_form.html.twig
@@ -57,6 +57,7 @@
         <br/>
         <div class="form-row">
             <div class="col">
+                {{ form_row(form.addGuest, {'attr': {'class': 'btn btn-primary float-right'}}) }}
                 {{ form_row(form.submit, {'attr': {'class': 'btn btn-success'}}) }}
             </div>
         </div>
