--- a/templates/answer/index.html.twig
+++ b/templates/answer/index.html.twig
@@ -20,7 +20,7 @@
     <br>
 
     <div class="row justify-content-around">
-        {% for guest in guests %}
+        {% for guest in app.user.guests %}
             <div class="col-lg-3 col-md-4 col-sm-6">
                 <div class="card guest">
                     <div class="card-body">
