--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -18,7 +18,7 @@
         <div class="form-group">
             {{ form_widget(form.plainPassword.second, {'attr': {'class': 'form-control', 'placeholder': 'Répéter le mot de passe'}}) }}
         </div>
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="Créer mon compte" />
+        <input class="btn btn-lg btn-secondary btn-block" type="submit" value="Créer mon compte" />
         {{ form_rest(form) }}
     </fieldset>
 {{ form_end(form) }}
