--- a/templates/bundles/FOSUserBundle/Resetting/request_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Resetting/request_content.html.twig
@@ -9,6 +9,6 @@
             <input class='form-control' type="text" id="username" name="username" required="required" />
         </div>
         <br>
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="{{ 'resetting.request.submit'|trans }}" />
+        <input class="btn btn-lg btn-secondary btn-block" type="submit" value="{{ 'resetting.request.submit'|trans }}" />
     </fieldset>
 </form>
