--- a/templates/bundles/FOSUserBundle/Resetting/reset_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Resetting/reset_content.html.twig
@@ -11,7 +11,7 @@
             {{ form_widget(form.plainPassword.second, {'attr': {'class': 'form-control', 'placeholder': 'Répéter le nouveau mot de passe'}}) }}
         </div>
         <br>
-        <input class="btn btn-lg btn-primary btn-block" type="submit" value="{{ 'resetting.reset.submit'|trans }}" />
+        <input class="btn btn-lg btn-secondary btn-block" type="submit" value="{{ 'resetting.reset.submit'|trans }}" />
         {{ form_rest(form) }}
     </fieldset>
 {{ form_end(form) }}
