--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -34,7 +34,7 @@
 <br/>
 <h4 class="text-center">OU</h4>
 <br>
-<a href="{{ path("fos_user_registration_register") }}" class="btn btn-lg btn-primary btn-block">Créez un compte</a>
+<a href="{{ path("fos_user_registration_register") }}" class="btn btn-lg btn-secondary btn-block">Créez un compte</a>
 
 <div class="text-right">
     <a class="small" href="{{ path("fos_user_resetting_request") }}">J'ai oublié mon mot de passe</a>
