--- a/assets/css/app.scss
+++ b/assets/css/app.scss
@@ -59,8 +59,36 @@ body > div.container {
 	background-attachment: fixed;
 }
 
+.flash-container {
+	padding: 10px 15px;
+}
+
+.flash-container.flash-success {
+	background-image: linear-gradient(rgba(48, 138, 69, 0.5), rgba(48, 138, 69, 0.5)), url("/images/background_blur.jpg");
+}
+
+.flash-container.flash-info {
+	background-image: linear-gradient(rgba(23, 162, 184, 0.5), rgba(23, 162, 184, 0.5)), url("/images/background_blur.jpg");
+}
+
+.flash-container.flash-warning {
+	background-image: linear-gradient(rgba(255, 112, 7, 0.5), rgba(255, 112, 7, 0.5)), url("/images/background_blur.jpg")
+}
+
+.flash-container.flash-danger, .flash-container.flash-error {
+	background-image: linear-gradient(rgba(220, 53, 69, 0.5), rgba(220, 53, 69, 0.5)), url("/images/background_blur.jpg");
+}
+
+.flash-container::before {
+	content: '\0026A0';
+    margin-right: 10px;
+}
+.flash-container.flash-success::before {
+	content: '\002714';
+}
+
 @media (max-width:575px) {
-	body > div.container {
+	body > div.main-container {
 		margin: 0;
 	}
 }
@@ -93,6 +121,10 @@ body > div.container {
 	#navbar-user-menu {
 		display: none !important;
 	}
+}
+
+a:active, a:focus {
+	outline:none
 }
 
 /**********************/
