--- a/templates/answer/full_form.html.twig
+++ b/templates/answer/full_form.html.twig
@@ -99,8 +99,8 @@
         <br/>
         <div class="form-row">
             <div class="col">
-                {{ form_row(form.addGuest, {'attr': {'class': 'btn btn-primary float-right'}}) }}
-                {{ form_row(form.submit, {'attr': {'class': 'btn btn-success'}}) }}
+                {{ form_row(form.submit, {'attr': {'class': 'btn btn-success float-right'}}) }}
+                {{ form_row(form.addGuest, {'attr': {'class': 'btn btn-outline-secondary'}}) }}
             </div>
         </div>
     {{ form_end(form) }}
