--- a/templates/answer/ceremony_only_form.html.twig
+++ b/templates/answer/ceremony_only_form.html.twig
@@ -27,7 +27,7 @@
         {% for form_guest in form.guests %}
             <div class="form-row">
                 <div class="col-xs-12 col-sm-6 col-lg">
-                    {{ form_widget(form_guest.name, {'attr': {'class': 'form-control', 'placeholder': 'Nom et prénom'}}) }}
+                    {{ form_widget(form_guest.name, {'attr': {'class': 'form-control', 'placeholder': "Nom et prénom de l'invité"}}) }}
                 </div>
                 <div class="col-md-12 col-lg text-lg-center">
                     <div class="form-check">
