--- a/templates/main/waiting_for_validation.html.twig
+++ b/templates/main/waiting_for_validation.html.twig
@@ -1,11 +1,13 @@
 {% extends 'base.html.twig' %}
 
+{% block flashes %}{% endblock %}
+
 {% block body %}
 
 <br/>
 
 <div class="row justify-content-md-center text-center">
-    <div class="col-md-3">
+    <div class="col-md-6 col-lg-3">
         <h3>Merci de votre inscription !</h3>
         <p> 
             Nous allons valider votre compte le plus vite possible pour que vous ayez accès au site. 
