--- a/templates/wedding_list/index.html.twig
+++ b/templates/wedding_list/index.html.twig
@@ -32,8 +32,8 @@
 
     <br>
 
-    <div id="mapContainer">
-        <div id="mapid" class="d-none d-md-block"></div>
+    <div id="mapContainer" class="d-none d-md-block">
+        <div id="mapid"></div>
     </div>
 
     <div id="classic-version" class="d-md-none">
