--- a/templates/anonymous_base.html.twig
+++ b/templates/anonymous_base.html.twig
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
+        <link rel="icon" type="image/png" href="{{ asset('images/favicon.png') }}" />
         <title>Mariage de Manon et Rémi</title>
         {% block stylesheets %}
             {{ encore_entry_link_tags('app') }}
