--- a/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Registration/register_content.html.twig
@@ -3,20 +3,31 @@
 <h4 class="text-center">Créez votre compte</h4>
 
 <br/>
+{{ form_errors(form) }}
+
 
 {{ form_start(form, {'method': 'post', 'action': path('fos_user_registration_register'), 'attr': {'class': 'fos_user_registration_register'}}) }}
     <fieldset>
         <div class="form-group">
-            {{ form_widget(form.username, {'attr': {'class': 'form-control', 'placeholder': 'Prénom et nom'}}) }}
+            {{ form_widget(form.username, {'attr': {'class': 'form-control'~(form_errors(form.username) ? ' is-invalid' : ''), 'placeholder': 'Prénom et nom'}}) }}
+            <div class="invalid-feedback">
+                {{ form_errors(form.username) }}
+            </div>
         </div>
         <div class="form-group">
-            {{ form_widget(form.email, {'attr': {'class': 'form-control', 'placeholder': 'Adresse e-mail'}}) }}
+            {{ form_widget(form.email, {'attr': {'class': 'form-control'~(form_errors(form.email) ? ' is-invalid' : ''), 'placeholder': 'Adresse e-mail'}}) }}
+            <div class="invalid-feedback">
+                {{ form_errors(form.email) }}
+            </div>
         </div>
         <div class="form-group">
-            {{ form_widget(form.plainPassword.first, {'attr': {'class': 'form-control', 'placeholder': 'Mot de passe'}}) }}
+            {{ form_widget(form.plainPassword.first, {'attr': {'class': 'form-control'~(form_errors(form.plainPassword.first) ? ' is-invalid' : ''), 'placeholder': 'Mot de passe'}}) }}
+            <div class="invalid-feedback">
+                {{ form_errors(form.plainPassword.first) }}
+            </div>
         </div>
         <div class="form-group">
-            {{ form_widget(form.plainPassword.second, {'attr': {'class': 'form-control', 'placeholder': 'Répéter le mot de passe'}}) }}
+            {{ form_widget(form.plainPassword.second, {'attr': {'class': 'form-control'~(form_errors(form.plainPassword.second) ? ' is-invalid' : ''), 'placeholder': 'Répéter le mot de passe'}}) }}
         </div>
         <input class="btn btn-lg btn-secondary btn-block" type="submit" value="Créer mon compte" />
         {{ form_rest(form) }}
