Hide flash message on "Created account" page

--- a/templates/main/waiting_for_validation.html.twig
+++ b/templates/main/waiting_for_validation.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block flashes %}{% endblock %}
+{% block flashes %} <div class="d-none">{{ parent() }}</div> {% endblock %}
 
 {% block body %}
 
