--- a/templates/bundles/FOSUserBundle/Security/login_content.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login_content.html.twig
@@ -16,7 +16,8 @@
     {% endif %}
     <fieldset>
         <div class="form-group">
-            <input class="form-control" type="text" id="username" name="_username" value="{{ last_username }}" required="required" autocomplete="username" placeholder="Prénom et nom" />
+<input class="form-control" type="text" id="username" name="_username" value="{{ last_username ?? app.request.query.get('username') }}" required="required" autocomplete="username" placeholder="Prénom et nom"/>
+
         </div>
         <div class="form-group">
             <input class="form-control" type="password" id="password" name="_password" required="required" autocomplete="current-password" placeholder="Mot de passe" />
