Add a message about clicking on the travel map to see details

--- a/templates/wedding_list/index.html.twig
+++ b/templates/wedding_list/index.html.twig
@@ -27,7 +27,8 @@
     {{ text('Liste de mariage - Texte') }}
 
     <span class="d-none d-md-block">
-        Si vous avez des soucis d'affichage, <a href="{{ path('wedding_list_classic') }}">cliquez ici</a>.
+        <p><strong>Cliquez sur un lieu pour afficher une carte postale, puis cliquez dessus pour la retourner !</strong></p>
+        <p>Si vous avez des soucis d'affichage, <a href="{{ path('wedding_list_classic') }}">cliquez ici</a>.</p>
     </span>
 
     <br>
